--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300&display=swap');
 
 :root{
-    --main-color:#e8786e;
-    --black:#555;
-    --light-color:#777;
-    --bg:#fceae9;
+    --main-color:#6666ff;
+    --black:#222;
+    --light-color:#6a2a00;
+    --bg:#b3b3ff;
     --border:.1rem solid rgba(0,0,0,.1);
     --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
 }
@@ -137,7 +137,7 @@ section{
 }
 
 .home .image img{
-    width: 100%;
+    width: 90%;
 }
 
 .home .content h3{
@@ -156,7 +156,7 @@ section{
 .home .cloud{
     position: absolute;
     bottom: 0; right: 0; left: 0;
-    height: 10rem;
+    height: 9rem;
     background-size: 250rem 18rem;
     background:url(../images/cloud.png) repeat-x;
     animation: cloud 10s linear infinite;
@@ -173,7 +173,7 @@ section{
 
 .home .cloud-1{
     opacity: .5;
-    height:20rem;
+    height:13rem;
     background-size: 250rem 20rem;
     animation-direction: reverse;
     animation-duration: 15s;
